--- a/src/pages/NodeEditor.css
+++ b/src/pages/NodeEditor.css
@@ -1,64 +1,86 @@
 .note-editor {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .note-title {
-    font-size: 2.5em;
-    font-weight: bold;
-    border: none;
-    outline: none;
-    margin-bottom: 40px;
-    width: 100%;
-    color: #333;
-  }
-  
-  .note-title::placeholder {
-    color: #aaa;
-    font-weight: bold;
-  }
-  
-  .note-content .ql-editor {
-    padding-bottom: 20px;
-    font-size: 1.5em;
-    line-height: 1.5;
-    color: #333;
-    overflow-y: auto;
-  }
-  
-  /* Remove default Quill toolbar styling */
-  .ql-toolbar.ql-snow {
-    border: none;
-    padding: 0;
-  }
-  
-  /* Custom Quill editor toolbar styling */
-  .ql-toolbar .ql-picker-label,
-  .ql-toolbar .ql-picker-item {
-    color: #333;
-  }
-  
-  
+  margin-top: 16px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
-  .ql-container.ql-snow {
-    border: none;
-    box-shadow: none;
-  }
+.note-title {
+  font-size: 2.5em;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  margin-bottom: 40px;
+  width: 100%;
+  color: #333;
+}
+
+.note-title::placeholder {
+  color: #aaa;
+  font-weight: bold;
+}
+
+.note-content .ql-editor {
+  padding-bottom: 20px;
+  font-size: 1.5em;
+  line-height: 1.5;
+  color: #333;
+  overflow-y: auto;
+}
+
+.dark .note-editor {
+  margin-top: 16px;
+  background-color: #0A0A0A;
+}
+
+.dark .note-title {
+  color: #fcfcfc;
+  background-color: #0A0A0A 
   
-  .ql-toolbar.ql-snow {
-    border: none;
-    padding: 0;
-    margin-bottom: 40px;
-  }
-  
-  .ql-editor {
-    min-height: calc(100vh - 300px);
-    padding: 0;
-    font-size: 1em;
-    line-height: 1.6;
-    color: #333;
-    overflow-y: auto;
-    border: none;
-  }
-  
+}
+
+.dark .note-content .ql-editor {
+  color: rgb(255, 255, 255); 
+}
+
+
+.dark .ql-toolbar {
+  background-color: #0A0A0A; 
+  color: white;
+}
+
+.dark .ql-editor {
+  color: #ddd;
+}
+
+
+.ql-toolbar.ql-snow {
+  border: none;
+  padding: 0;
+}
+
+.ql-toolbar .ql-picker-label,
+.ql-toolbar .ql-picker-item {
+  color: #333;
+}
+
+.ql-container.ql-snow {
+  border: none;
+  box-shadow: none;
+}
+
+.ql-toolbar.ql-snow {
+  border: none;
+  padding: 0;
+  margin-bottom: 40px;
+}
+
+.ql-editor {
+  min-height: calc(100vh - 280px);
+  padding: 0;
+  font-size: 1em;
+  line-height: 1.6;
+  color: #333;
+  overflow-y: auto;
+  border: none;
+}
